objects/Interaction__c.object
<CustomObject><fields>
        <fullName>Action_Required__c</fullName>
        <formula>HYPERLINK("detail/"&amp;Id,Research_Period__r.Student__c&amp;" - "&amp;Name&amp;", "&amp;TEXT(DAY(DATEVALUE(Date_Time__c)))&amp;"/"&amp;TEXT(MONTH(DATEVALUE(Date_Time__c)))&amp;"/"&amp;TEXT(YEAR(DATEVALUE(Date_Time__c)))&amp;" - "&amp;IF(Submit_to_Supervisor__c=TRUE,"Ready for Review","Student yet to Complete"))</formula>
        <inlineHelpText>Narrative field for use on Staff Community Home page list views</inlineHelpText>
        <label>Action Required</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Actions_Set__c</fullName>
        <inlineHelpText>To be agreed between the Supervisor and Student</inlineHelpText>
        <label>Actions Set</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Date_Time__c</fullName>
        <inlineHelpText>Date and Time the Interaction will take place</inlineHelpText>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Matters_Discussed__c</fullName>
        <inlineHelpText>To be completed by Student and agreed between Student and Supervisor.</inlineHelpText>
        <label>Matters Discussed</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Mode_of_Meeting__c</fullName>
        <inlineHelpText>To be completed by Student</inlineHelpText>
        <label>Mode of Meeting</label>
        <picklist>
            <picklistValues>
                <fullName>Face to Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skype/Screenshare</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Research_Period__c</fullName>
        <label>Research Period</label>
        <referenceTo>Research_Period__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed with caveats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Submit_to_Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Once ticked, your Supervisor will be alerted to review the record.</inlineHelpText>
        <label>Submit to Supervisor</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Supervisor_Feedback_Comments__c</fullName>
        <inlineHelpText>To be completed by Supervisor as required</inlineHelpText>
        <label>Supervisor Feedback Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Supervisor_Feedback__c</fullName>
        <inlineHelpText>To be completed by Supervisor</inlineHelpText>
        <label>Supervisor Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed that this is an accurate record of the supervisory meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student is required to re-submit this record taking feedback comments into account</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The person you are looking for is not a Registered Supervisor. Please contact pgr@lstmed.ac.uk for more information.</errorMessage>
            <filterItems>
                <field>Supervision__c.Supervisor__r.Registered_Supervisor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Supervision__c.Supervisor__r.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Supervision__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>User_is_Supervisor__c</fullName>
        <description>Returns TRUE if related Supervision record's Staff record = Running User's Contact ID. Used to drive List Views on Staff Community</description>
        <formula>IF($User.ContactId=Supervisor__r.Supervisor__r.Id,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User is Supervisor</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Interaction</label><nameField>
        <label>Interaction Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Interactions</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>Completed_Supervision_Sessions</fullName>
        <columns>NAME</columns>
        <columns>Research_Period__c</columns>
        <columns>Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Mode_of_Meeting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_is_Supervisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Interaction__c.Supervision_Session</value>
        </filters>
        <label>Completed Supervision Sessions</label>
    </listViews><listViews>
        <fullName>My_Students_Workshops</fullName>
        <columns>NAME</columns>
        <columns>Research_Period__c</columns>
        <columns>Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_is_Supervisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Interaction__c.Workshop</value>
        </filters>
        <label>My Students' Workshops</label>
    </listViews><listViews>
        <fullName>Scheduled_Supervisory_Meetings</fullName>
        <columns>Action_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_is_Supervisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Interaction__c.Supervision_Session</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <label>Scheduled Supervisory Meetings</label>
    </listViews><listViews>
        <fullName>Supervision_Sessions_for_review</fullName>
        <columns>Action_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_is_Supervisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Interaction__c.Supervision_Session</value>
        </filters>
        <filters>
            <field>Submit_to_Supervisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Supervision Sessions for review</label>
    </listViews><recordTypes>
        <fullName>Supervision_Session</fullName>
        <active>true</active>
        <description>Supervisory Meeting record type</description>
        <label>Supervisory Meeting</label>
    </recordTypes><recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <description>Workshop record type for Soft Skill workshops and others</description>
        <label>Workshop</label>
    </recordTypes></CustomObject>